feat(poll): add answers to polls
